# Probabilistic-bitcoin-with-ML-

./: .editorconfig  .gitignore  LICENSE  README.md  bn_trading_pipeline.py  pyproject.toml
bn_outputs/: bn_model.pkl  evaluation.md  metadata.json  variables_report.md
data/: README.md
notebooks/: README.md
pipeline/: run_tradingpipeline_v4.py
pipeline/anomaly_trading_12h_v1/: report.md
pipeline/anomaly_trading_12h_v2/: report.md
pipeline/anomaly_trading_12h_v3/: report.md
pipeline/gate_module_12h_v1/: README.md  report.md
pipeline/gmm_indicator_groups/: run_gmm_indicator_groups.py
pipeline/gmm_ohlcv_eval/: run_gmm_ohlcv.py
pipeline/interval_pipeline_12h_v1/: README.md  report.md
pipeline/reachable_range_interval_12h_v1/: README.md  report.md
pipeline/reachable_range_interval_12h_v2_cqr/: README.md  report.md
pipeline/reachable_range_interval_12h_v3_trade/: README.md  report.md
pipeline/regime_pipeline_12h/: README.md  config.py  data.py  eligibility.py  evaluation.py  models.py  regime_pipeline_12h_report.md  regimes_gmm.py  regimes_hmm.py  run_pipeline.py
pipeline/regime_pipeline_12h_rolling/: report.md
pipeline/source/: __init__.py
reports/: README.md  feature_discovery_12H_report.md  feature_discovery_1D_report.md
scripts/: README.md  feature_discovery_12H.py  feature_discovery_1D.py  feature_discovery_systematic.py  resample_indicators.py  signals_code_hour_v1_0.py  signals_code_hour_version_1_0.py  step1_gmm_regimes_open.py  step2_trade_outcome_integrity.py  validate_regimes.py  verify_precision_confusion.py
tests/: README.md
(+2059 files in other folders)
