[build-system]
requires = [""setuptools>=68"", ""wheel""]
build-backend = ""setuptools.build_meta""
[project]
name = ""bitcoin-probabilistic-learning""
version = ""0.1.0""
description = ""Probabilistic machine learning for Bitcoin market risk modeling.""
readme = ""README.md""
requires-python = "">=3.10""
license = { file = ""LICENSE"" }
[tool.setuptools.packages.find]
where = [""src""]
